<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textview.title.size"
                tool:text="@string/app_name" />

            <ImageView
                android:id="@+id/imgSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:contentDescription="@null"
                android:src="@drawable/ic_save_black_24dp" />

            <ImageView
                android:id="@+id/imgAttach"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_toLeftOf="@id/imgSave"
                android:src="@drawable/ic_attach_file_black_24dp" />
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <ImageView
        android:id="@+id/imgNote"
        android:layout_width="match_parent"
        android:layout_height="@dimen/image.height"
        android:contentDescription="@null"
        android:scaleType="centerInside"
        tool:src="@mipmap/ic_launcher" />

    <EditText
        android:id="@+id/edtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edittext.hint.title" />

    <EditText
        android:id="@+id/edtContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editetext.hint.content" />

</LinearLayout>
