<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menuAdd"
        android:icon="@drawable/ic_note_add"
        android:title="@string/title.menu.add_new_note"
        app:showAsAction="ifRoom" />
</menu>