<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menuAttach"
        android:icon="@drawable/ic_attach_file"
        android:title="@string/title.menu.attach_file"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menuAddNote"
        android:icon="@drawable/ic_add_circle"
        android:title="@string/title.menu.add"
        app:showAsAction="ifRoom" />
</menu>
