<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorGreyDark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvEditTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:text="@string/name.node_edit"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/textView.size" />

        <ImageView
            android:id="@+id/imgAddNote"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:contentDescription="@string/image.description"
            android:src="@drawable/ic_add_box_white_24dp" />

    </LinearLayout>
</android.support.v7.widget.Toolbar>
